[project]
name = "ipynb-data-server"
version = "0.1.0"
description = "A simple way to visualize data structurs realtime in a jupyter notebook using a flask dashboard"
authors = [
    {name = "Sam",email = "samnichols314@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pyngrok (>=7.2.3,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ipynb_data_server", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
